# Deadlock-Character-Analysis

./: .env  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  config.example.env  docker-compose.yml  matchups_prev.csv  plan.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
agent-logs/: 2025-10-26T045910-0500-deadlock-plan-consumption.md  2025-10-26T101218-0500-path-neighbor-ui.md  2025-10-26T210227-0500-svelte-migration-exploration.md  2025-10-26T211115-0500-svelte-migration-exploration-ii.md  2025-10-26T231614-0500-svelte-ci-fix-and-workflow.md  2025-10-27T050419-0500-svelte5-sveltekit2-decision.md  2025-10-27T051551-0500-sveltekit-port-and-ci.md  2025-10-27T054924-0500-docs-a11y-schema-preview.md  2025-10-27T062402-0500-docs-schema-tests-executed.md  2025-10-27T063438-0500-export-a11y-e2e.md  2025-10-27T065612-0500-sprint-a-docs-a11y-perf.md  2025-10-27T071131-0500-react-deprecated-sveltekit-cutover.md  2025-10-27T073432-0500-perf-a11y-tests-docs.md  2025-10-27T075424-0500-pr-comment-schema-export-hardening.md  2025-10-27T081152-0500-ci-lockfile-fix-and-local-green.md  2025-10-27T085234-0500-health-probe-perf-advisory-a11y-micro.md  2025-10-27T092736-0500-sveltekit-pages-merge-to-main.md  2025-10-27T105814-0500-fork-safe-commenter-added.md  2025-10-27T112715--0500-sveltekit-pages-sync.md  2025-10-27T114722--0500-export-dedupe-implementation.md  2025-10-27T120856--0500-style-polish.md  2025-10-27T125932--0500-sidebar-compact.md  2025-10-27T210900--0500-combobox-clear-fix.md  2025-10-27T212813--0500-context-handoff.md  (+10 more)
data/: archetypes.yaml  (+2 more)
(+137 files in other folders)
